Adds Sets examples